--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <main>
         <section id="hero" class="hero">
             <div class="container">
-                <h1>Jasa Pembuatan Website Responsif dan Cepat</h1>
+                <h1>Jasa Pembuatan Website Responsif dan Cepat Mulai Rp100.000</h1>
                 <p>Ubah ide bisnis Anda menjadi kehadiran digital yang nyata. Kami membantu Anda membuat website yang cepat, aman, dan mudah diakses dari perangkat apa pun.</p>
                 <a href="#paket" class="cta-button">Lihat Pilihan Paket</a>
             </div>
